<resources xmlns:xliff="http://schemas.android.com/apk/res/android">
    <string name="app_name">松鼠视频播放器</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="time_second">秒前</string>
    <string name="time_minute">分钟前</string>
    <string name="time_hour">小时前</string>
    <string name="time_day">天前</string>

    <string name="code_unknow">"未知错误"</string>
    <string name="code_10">"网络连接异常"</string>
    <string name="code_429">"请求太频繁，请30秒后再试。"</string>
    <string name="code_401">"验证失效，请重新登录。"</string>
    <string name="code_500">"对不起，服务器出错了"</string>
    <string name="code_704">"该相框/好友已经存在，请勿重复操作"</string>
    <string name="code_702">"要添加的用户/相框不存在"</string>
    <string name="code_705">"好友不存在"</string>
    <string name="code_708">"您输入的松鼠号有误，请重新输入"</string>
    <string name="code_712">"相框处于离线状态"</string>
    <string name="code_713">"邮箱号已经被使用"</string>
    <string name="code_801">"请求的图片不存在"</string>
    <string name="code_1002">"旧密码不正确"</string>
    <string name="code_1003">"手机号码已经被注册"</string>
    <string name="code_1004">"此手机号码尚未注册"</string>
    <string name="code_1005">"邮箱帐号已经被注册"</string>
    <string name="code_1006">"此邮箱帐号尚未注册"</string>
    <string name="code_1007">"验证码不正确"</string>
    <string name="code_1302">"用户名或者密码不正确"</string>


    <!-- 自定义上拉刷新下拉更多的listview -->
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更多</string>
    <string name="p2refresh_end_load_fail">加载数据失败，点击重新加载</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_doing_full">已加载全部</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <!-- 筛选页面ListView有页脚用到的 -->
    <string name="listview_footer_hint_loading">加载中…</string>
    <string name="listview_footer_hint_fail">加载失败</string>
    <string name="listview_footer_hint_no_data">暂无数据</string>


    <string name="video_original">100%</string>
    <string name="video_fit_screen">全屏</string>
    <string name="video_stretch">拉伸</string>
    <string name="video_crop">裁剪</string>
    <string name="video_screen_locked">屏幕锁定</string>
    <string name="video_screen_unlocked">屏幕解锁</string>
    <string name="video_layout_buffering_progress">缓冲:%1$d%%</string>
    <string name="video_cannot_play">对不起,该视频暂时不能播放</string>
    <string name="video_layout_loading">正在加载中...</string>
    <string name="video_layout_before_loading">加载中...</string>
    <string name="closing_file">正在退出…</string>

    <string name="vitamio_library_app_name">VitamioLibrary</string>
    <string name="vitamio_init_decoders">初始化播放器中…</string>
    <string name="permission_group_tools_label">Vitamio tools</string>
    <string name="permission_group_tools_description">Access Vitamio package and resources.</string>
    <string name="permission_receive_messages_label">Receive Vitamio messages</string>
    <string name="permission_receive_messages_description">Receive all broadcasts from Vitamio service.</string>
    <string name="permission_write_providers_label">Write Vitamio providers</string>
    <string name="permission_write_providers_description">Delete, update or create new items in Vitamio providers. </string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to this device.</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="vitamio_theme_app_name">VPlayer codec</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_unknown">对不起,这个视频不能播放</string>
    <string name="VideoView_error_button">OK</string>
    <string name="imageview_content_description"></string>
    <string name="content_desc_lock">锁定</string>

    <string name="character_recommend">"推荐"</string>
    <string name="character_all_category">"全部"</string>

    <string name="character_movie">"电影"</string>
    <string name="character_teleplay">"连续剧"</string>
    <string name="character_opera">"曲艺"</string>
    <string name="character_child">"少儿"</string>
    <string name="character_health">"养生"</string>

    <string name="character_movie_xiju">"喜剧"</string>
    <string name="character_movie_aiqing">"爱情"</string>
    <string name="character_movie_dongzuo">"动作"</string>
    <string name="character_movie_zhanzheng">"战争"</string>
    <string name="character_movie_wuxia">"武侠"</string>
    <string name="character_movie_donghua">"动画"</string>
    <string name="character_movie_juqing">"剧情"</string>
    <string name="character_movie_zhuanji">"传记"</string>
    <string name="character_movie_lishi">"历史"</string>
    <string name="character_movie_kehuan">"科幻"</string>
    <string name="character_movie_qita">"其他"</string>

    <string name="character_teleplay_jiating">"家庭"</string>
    <string name="character_teleplay_guzhuang">"古装"</string>
    <string name="character_teleplay_xiju">"喜剧"</string>
    <string name="character_teleplay_yanqing">"言情"</string>
    <string name="character_teleplay_zhanzheng">"战争"</string>
    <string name="character_teleplay_jingfei">"警匪"</string>
    <string name="character_teleplay_qita">"其他"</string>

    <string name="character_child_yizhiqinzi">"益智亲子"</string>
    <string name="character_child_ertongzaojiao">"儿童早教"</string>
    <string name="character_child_ertongyinyue">"儿歌音乐"</string>
    <string name="character_child_qihuanmofa">"奇幻魔法"</string>
    <string name="character_child_lixianqiyu">"历险奇遇"</string>
    <string name="character_child_gaoxiaoleyuan">"搞笑乐园"</string>
    <string name="character_child_qita">"其他"</string>

    <string name="character_opera_jingju">"京剧"</string>
    <string name="character_opera_pingju">"评剧"</string>
    <string name="character_opera_yuju">"豫剧"</string>
    <string name="character_opera_yueju">"越剧"</string>
    <string name="character_opera_huangmeixi">"黄梅戏"</string>
    <string name="character_opera_xiangshengxiaopin">"相声小品"</string>
    <string name="character_opera_pingshuxiaohua">"评书笑话"</string>
    <string name="character_opera_moshuzaji">"魔术杂技"</string>
    <string name="character_opera_hebeibangzi">"河北梆子"</string>
    <string name="character_opera_chuanju">"川剧"</string>
    <string name="character_opera_errenzhuan">"二人转"</string>
    <string name="character_opera_qinqiang">"秦腔"</string>
    <string name="character_opera_jinju">"晋剧"</string>
    <string name="character_opera_huaguxi">"花鼓戏"</string>
    <string name="character_opera_kunqu">"昆曲"</string>
    <string name="character_opera_puxianxi">"莆仙戏"</string>
    <string name="character_opera_xiju">"锡剧"</string>
    <string name="character_opera_minjianxiaodiao">"民间小调"</string>
    <string name="character_opera_chaoju">"潮剧"</string>
    <string name="character_opera_quju">"曲剧"</string>
    <string name="character_opera_puju">"蒲剧"</string>
    <string name="character_opera_qita">"其他"</string>

    <string name="character_health_yangsheng">"养生"</string>
    <string name="character_health_taijiquan">"太极拳"</string>
    <string name="character_health_yiliao">"医疗"</string>
    <string name="character_health_zhongyi">"中医"</string>
    <string name="character_health_liangxing">"两性"</string>
    <string name="character_health_changshi">"常识"</string>
    <string name="character_health_erke">"儿科"</string>
    <string name="character_health_laonian">"老年"</string>
    <string name="character_health_xinli">"心理"</string>
    <string name="character_health_zhiyebing">"职业病"</string>
    <string name="character_health_qita">"其他"</string>


    <string name="character_starring">"主演: "</string>
    <string name="character_types">"类型: "</string>
    <string name="character_intros">"简介: "</string>
    <string name="character_language_da_lu">"大陆"</string>
    <string name="character_language_xiang_gang">"香港"</string>
    <string name="character_language_tai_wan">"台湾"</string>
    <string name="character_language_guoyu">"国语"</string>
    <string name="character_language_yin_du">"印度"</string>
    <string name="character_language_yinduyu">"印度语"</string>
    <string name="character_language_mei_guo">"美国"</string>
    <string name="character_language_yingyu">"英语"</string>
    <string name="character_language_qita">"其他"</string>
    <string name="character_language_weizhi">"未知"</string>
    <string name="character_language">"语"</string>

    <string name="please_check_network">"请检查下网络连接"</string>

    <string name="no_update_data">"没有数据更新"</string>

    <string name="open_video_fail">"打开视频失败"</string>

    <string name="play_next_item">"播放下一集节目"</string>

    <string name="sorry_for_out_of_data_video_url">"抱歉，该集的视频地址失效"</string>

    <string name="press_again_and_exit">"再按一次，退出播放器"</string>

    <string name="load_video_url_fail">"加载视频地址失败"</string>

    <string name="media_controller_mute">"静音"</string>
    <string name="media_controller_volume">"音量:"</string>
    <string name="media_controller_brightness">"亮度:"</string>


    <string name="download_already_has_two_task">"已经有2个下载任务了~"</string>


    <string name="layout_download_episode_selection_up_left">"选择下载剧集"</string>
    <string name="layout_download_episode_selection_select_all">"全选"</string>
    <string name="layout_download_episode_selection_download">"下载 ("<xliff:g slug="count">%s</xliff:g>")"</string>

    <string name="sd_alread_use">"已用空间: "<xliff:g slug="name">%s</xliff:g></string>
    <string name="sd_available">"可用空间: "<xliff:g slug="name">%s</xliff:g></string>

    <string name="func_activity_episode_num">"第"<xliff:g slug="count">%s</xliff:g>"集"</string>


    <string name="dialog_custom_message_3g">当前为移动网络状态, 继续播\n放将会消耗流量,是否继续?</string>
    <string name="dialog_custom_message_confirm">继续</string>
    <string name="dialog_custom_message_cancel">取消</string>
    <string name="dialog_custom_message_go">确定</string>


    <string name="net_changed_no_network_toast">请检查网络...</string>


    <string name="local_media_title">本地</string>
    <string name="local_media_entire">全部</string>
    <string name="local_media_movie">电影</string>
    <string name="local_media_teleplay">电视剧</string>
    <string name="local_media_opera">曲艺</string>
    <string name="local_media_dance">广场舞</string>
    <string name="local_media_child">少儿</string>
    <string name="local_media_health">健康养生</string>
    <string name="local_media_loading">正在加载中...</string>
    <string name="local_media_no_result">该分类下没有视频文件</string>
    <string name="local_media_dialog_delete">该操作将删除本地的视频文件,\n并且不可恢复,你确定要删除该\n视频文件?</string>
    <string name="local_media_toast_scan_complete">扫描完成</string>
    <string name="local_media_dialog_title">确定删除%s?</string>
    <string name="local_media_play_video_null_text">""</string>
    <string name="local_media_play_video_file_not_available">"该文件不存在,或已被删除"</string>


</resources>
