<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/dimen460"
        android:layout_height="@dimen/dimen300"
        android:background="@drawable/dlg_custom_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen0"
            android:layout_weight="1">

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/local_media_dialog_delete"
                android:textColor="@color/local_media_dialog_message"
                android:lineSpacingExtra="@dimen/dimen8"
                android:textSize="@dimen/font_dimen_28" />

        </RelativeLayout>

        <View
            android:id="@+id/divider_hori"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#e2e2e2" />

        <LinearLayout
            android:id="@+id/ll_btns"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen70"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/negativeButton"
                android:layout_width="@dimen/dimen0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dlg_custom_btn_bg_cancel_selector"
                android:gravity="center"
                android:text="@string/dialog_custom_message_cancel"
                android:textColor="@color/local_media_dialog_message"
                android:textSize="@dimen/font_dimen_28" />

            <View
                android:id="@+id/divider_port"
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#e2e2e2" />

            <TextView
                android:id="@+id/positiveButton"
                android:layout_width="@dimen/dimen0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/dlg_custom_btn_bg_confirm_selector"
                android:gravity="center"
                android:text="@string/dialog_custom_message_go"
                android:textColor="@drawable/dlg_local_media_btn_text_confirm_selector"
                android:textSize="@dimen/font_dimen_28" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>