<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_whole">

    <ImageView
        android:id="@+id/iv_go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dimen40"
        android:paddingLeft="@dimen/dimen60"
        android:paddingRight="@dimen/dimen40"
        android:paddingTop="@dimen/dimen50"
        android:scaleType="centerCrop"
        android:src="@drawable/go_back_selector" />


    <LinearLayout
        android:id="@+id/ll_right_error_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/movie_icon_default" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen20"
            android:text="获取内容失败"
            android:textColor="#fff"
            android:textSize="@dimen/font_dimen_48" />

        <TextView
            android:id="@+id/tv_right_error_content_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen20"
            android:background="@drawable/retry_btn_sharp_default"
            android:gravity="center"
            android:text="点击重试"
            android:textColor="#fff"
            android:textSize="@dimen/font_dimen_36" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_right_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_right_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/movie_loading01" />
        <!--android:background="@anim/loading_anim" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen50"
            android:text="全力加载中..."
            android:textColor="#fff"
            android:textSize="@dimen/font_dimen_48" />

    </LinearLayout>


    <ScrollView
        android:id="@+id/sv_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dimen90"
        android:layout_marginLeft="@dimen/dimen140"
        android:layout_marginRight="@dimen/dimen140"
        android:layout_marginTop="@dimen/dimen90"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/rl_video_deatil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/iv_video_poster"
                    android:layout_width="@dimen/dimen190"
                    android:layout_height="@dimen/dimen240"
                    android:scaleType="centerCrop"
                    android:src="@drawable/video_load_default" />

                <TextView
                    android:id="@+id/tv_shadow"
                    android:layout_width="@dimen/dimen190"
                    android:layout_height="@dimen/dimen6"
                    android:layout_below="@id/iv_video_poster"
                    android:background="#66000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen40"
                    android:layout_toRightOf="@+id/iv_video_poster"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_video_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="大圣归来"
                        android:textColor="#fff"
                        android:textSize="@dimen/font_dimen_36" />


                    <LinearLayout
                        android:id="@+id/ll_collect_download"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen15"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:id="@+id/rl_collect"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RelativeLayout
                                android:id="@+id/rl_collect_unselected"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:clickable="true">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/video_detail_collect_download_btn_unselect_sharp" />

                                <ImageView
                                    android:id="@+id/iv_collect_unselected"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_marginLeft="@dimen/dimen20"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/collect_default" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_marginLeft="@dimen/dimen15"
                                    android:layout_toRightOf="@id/iv_collect_unselected"
                                    android:text="收藏"
                                    android:textColor="#fff"
                                    android:textSize="@dimen/font_dimen_28" />

                            </RelativeLayout>

                            <RelativeLayout
                                android:id="@+id/rl_collect_selected"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:clickable="true"
                                android:visibility="gone">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/video_detail_collect_download_btn_select_sharp" />

                                <ImageView
                                    android:id="@+id/iv_collect_selected"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_marginLeft="@dimen/dimen20"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/collect_press" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_marginLeft="@dimen/dimen15"
                                    android:layout_toRightOf="@id/iv_collect_selected"
                                    android:text="已收藏"
                                    android:textColor="#fff"
                                    android:textSize="@dimen/font_dimen_28" />

                            </RelativeLayout>

                        </RelativeLayout>


                        <RelativeLayout
                            android:id="@+id/rl_download"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dimen40"
                            android:background="@drawable/video_detail_collect_download_btn_unselect_sharp"
                            android:clickable="true">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:drawableLeft="@drawable/detail_download_selector"
                                android:drawablePadding="@dimen/dimen15"
                                android:text="下载"
                                android:textColor="#fff"
                                android:textSize="@dimen/font_dimen_28" />

                        </RelativeLayout>

                    </LinearLayout>

                    <FrameLayout
                        android:id="@+id/fl_episode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen30">

                    </FrameLayout>

                </LinearLayout>

            </RelativeLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen40"
                android:scaleType="centerCrop"
                android:src="@drawable/video_detail_line" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen30"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_video_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textSize="@dimen/font_dimen_24"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_video_actor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textSize="@dimen/font_dimen_24"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_video_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textSize="@dimen/font_dimen_24"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_video_story"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textSize="@dimen/font_dimen_24"
                    android:visibility="gone" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/rl_episode_download_selection"
        android:layout_width="@dimen/dimen395"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="#e6000000"
        android:paddingLeft="@dimen/dimen20"
        android:paddingRight="@dimen/dimen10">

        <RelativeLayout
            android:id="@+id/rl_up_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen100"
            android:layout_alignParentTop="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/layout_download_episode_selection_up_left"
                android:textColor="#fff"
                android:textSize="@dimen/font_dimen_28" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingBottom="@dimen/dimen20"
                android:paddingLeft="@dimen/dimen20"
                android:paddingRight="@dimen/dimen10"
                android:paddingTop="@dimen/dimen20"
                android:scaleType="centerCrop"
                android:src="@drawable/download_episode_close_selector" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_down_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen100"
            android:layout_alignParentBottom="true"
            android:paddingRight="@dimen/dimen10">

            <TextView
                android:id="@+id/tv_select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/layout_download_episode_selection_select_all"
                android:textColor="#fff"
                android:textSize="@dimen/font_dimen_28"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_downloading_nums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/layout_download_episode_selection_download"
                android:textColor="#fff"
                android:textSize="@dimen/font_dimen_28" />
        </RelativeLayout>

        <GridView
            android:id="@+id/gv_selection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/rl_down_text"
            android:layout_below="@id/rl_up_text"
            android:horizontalSpacing="@dimen/dimen15"
            android:listSelector="@color/ss_transparent"
            android:numColumns="4"
            android:scrollbars="none"
            android:verticalSpacing="@dimen/dimen15" />

    </RelativeLayout>

</RelativeLayout>